Synapse deleted. Axon introduced and updated all dependable files.

--- a/CodeNameZetaAndroidApp/www/signup_stage_3.html
+++ b/CodeNameZetaAndroidApp/www/signup_stage_3.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="img/icon.png">
     <script type="text/javascript" src="js/localforage.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/synapse.js"></script>
+    <script type="text/javascript" src="js/axon.js"></script>
     <script>
         /*
         ajax('text', {trigger:'methodname', usertype:'admin/proposer/enduser/portal'}, { masterId: '14', c_pwd: 'sarvaswa' },
