--- a/CodeNameZetaAndroidApp/www/signup_verify.html
+++ b/CodeNameZetaAndroidApp/www/signup_verify.html
@@ -76,7 +76,7 @@
         <script type="text/javascript" data-main="scripts/startup" src="lib/require.2.1.8.js" async></script>
         <script type="text/javascript" src="js/framework7.js"></script>
         <script type="text/javascript" src="js/my-app.js"></script>
-        <script type="text/javascript" src="js/synapse.js"></script>
+        <script type="text/javascript" src="js/axon.js"></script>
 
     <script>
 
