--- a/CodeNameZetaAndroidApp/www/index.html
+++ b/CodeNameZetaAndroidApp/www/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="img/icon.png">
     <script type="text/javascript" src="js/localforage.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/synapse.js"></script>
+    <script type="text/javascript" src="js/axon.js"></script>
     <script>
         localforage.setItem('app', 'codenamezeta', function (err) {
             localforage.getItem('app', function (err, value) {
